# GoIT_h9_web-scraping_Beautiful_Soup_Scrapy

./: .gitignore  README.md  pyproject.toml
goit_h9_web_scraping_beautiful_soup_scrapy/: main_bs.py  main_scrapy.py  main_scrapy_one_crawler.py
goit_h9_web_scraping_beautiful_soup_scrapy/packages_from_homework_#8/: connect.py  seed.py
goit_h9_web_scraping_beautiful_soup_scrapy/packages_from_homework_8/: connect.py  seed.py
